// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ladder highlights a selected vehicle 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <line
      className="c-ladder__scheduled-line on-time early-red"
      x1={-63}
      x2={40}
      y1={-68.75}
      y2={-151.25}
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        2
        <br />
        <b>
          Vehicle:
        </b>
         
        downward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          NORA JONES #op2
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(-63,-68.75)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        1
        <br />
        <b>
          Vehicle:
        </b>
         
        upward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle c-ladder__vehicle--selected"
        onClick={[Function]}
        transform="translate(63,-82.5)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder renders a ghost bus 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block
        <br />
        <b>
          Run:
        </b>
         
        0123
        <br />
        <b>
          Vehicle:
        </b>
         
        N/A
        <br />
        <b>
          Variant:
        </b>
         
        X
        <br />
        <b>
          Adherence:
        </b>
         
        N/A
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          N/A
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium c-vehicle-icon--highlighted ghost early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            0123
          </text>
          <g
            transform="scale(0.4375) translate(-24,-23)"
          >
            <path
              className="c-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              strokeLinejoin="round"
            />
            <path
              className="c-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              strokeLinejoin="round"
            />
          </g>
          <text
            className="c-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={4.5}
          >
            X
          </text>
          <g
            transform="translate(9.375, -6.25) scale(0.2) translate(-24, -24)"
          >
            <g
              className="c-icon-alert-circle--highlighted"
            >
              <circle
                className="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                className="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                className="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder renders a ladder 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <line
      className="c-ladder__scheduled-line on-time early-red"
      x1={-63}
      x2={40}
      y1={-68.75}
      y2={-151.25}
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        1
        <br />
        <b>
          Vehicle:
        </b>
         
        upward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(63,-82.5)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        2
        <br />
        <b>
          Vehicle:
        </b>
         
        downward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          NORA JONES #op2
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(-63,-68.75)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        3
        <br />
        <b>
          Vehicle:
        </b>
         
        notimepoint
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          SHENGMMO XI #op3
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(-63,0)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            3
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder renders a ladder with no timepoints 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        1
        <br />
        <b>
          Vehicle:
        </b>
         
        upward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
  </svg>
</div>
`;

exports[`ladder renders a laying over vehicle 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        over
        <br />
        <b>
          Vehicle:
        </b>
         
        laying-over
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(0,-35)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--small on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={40}
            x={-20}
            y={7.359999999999999}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--extended"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            ADDED
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.38) rotate(270) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder renders a laying over vehicle with a scheduled line 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <line
      className="c-ladder__scheduled-line on-time early-red"
      x1={0}
      x2={-40}
      y1={-35}
      y2={-68.75}
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        over
        <br />
        <b>
          Vehicle:
        </b>
         
        laying-over
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(0,-35)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--small on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={7.359999999999999}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={12.86}
          >
            over
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.38) rotate(270) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder renders a reversed ladder 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <line
      className="c-ladder__scheduled-line on-time early-red"
      x1={63}
      x2={40}
      y1={-82.5}
      y2={-77}
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        1
        <br />
        <b>
          Vehicle:
        </b>
         
        upward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(63,-82.5)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t2
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t0
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder renders an off-course vehicle 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        T71-17
        <br />
        <b>
          Run:
        </b>
         
        1
        <br />
        <b>
          Vehicle:
        </b>
         
        1439
        <br />
        <b>
          Variant:
        </b>
         
        D
        <br />
        <b>
          Adherence:
        </b>
         
        N/A
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium off-course early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
          <text
            className="c-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8.5}
          >
            D
          </text>
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder renders an overload vehicle 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        1
        <br />
        <b>
          Vehicle:
        </b>
         
        upward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          PATTI SMITH #op1
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(63,-82.5)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={40}
            x={-20}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--extended"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            ADDED
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder shows schedule line in the other direction 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 184,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-92 -55 184 0"
    width={184}
  >
    <line
      className="c-ladder__scheduled-line on-time early-red"
      x1={-63}
      x2={40}
      y1={41.25}
      y2={-41.25}
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block-1
        <br />
        <b>
          Run:
        </b>
         
        2
        <br />
        <b>
          Vehicle:
        </b>
         
        downward
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          NORA JONES #op2
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(-63,41.25)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t2
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t0
      </text>
    </div>
  </svg>
</div>
`;

exports[`ladder shows vehicles with current block waivers 1`] = `
<div
  className="c-ladder"
  style={
    {
      "width": 232,
    }
  }
>
  <svg
    className="c-ladder__svg"
    height={0}
    viewBox="-116 -55 232 0"
    width={232}
  >
    <line
      className="c-ladder__scheduled-line on-time early-red"
      x1={-87}
      x2={40}
      y1={-68.75}
      y2={-151.25}
    />
    <line
      className="c-ladder__scheduled-line on-time early-red"
      x1={-63}
      x2={40}
      y1={-68.75}
      y2={-151.25}
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block
        <br />
        <b>
          Run:
        </b>
         
        0123
        <br />
        <b>
          Vehicle:
        </b>
         
        N/A
        <br />
        <b>
          Variant:
        </b>
         
        X
        <br />
        <b>
          Adherence:
        </b>
         
        N/A
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          N/A
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium ghost early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            0123
          </text>
          <g
            transform="scale(0.4375) translate(-24,-23)"
          >
            <path
              className="c-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              strokeLinejoin="round"
            />
            <path
              className="c-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              strokeLinejoin="round"
            />
          </g>
          <text
            className="c-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={4.5}
          >
            X
          </text>
          <g
            transform="translate(9.375, -6.25) scale(0.2) translate(-24, -24)"
          >
            <g
              className="c-icon-alert-circle--black"
            >
              <circle
                className="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                className="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                className="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </div>
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block
        <br />
        <b>
          Run:
        </b>
         
        run
        <br />
        <b>
          Vehicle:
        </b>
         
        label
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          NORA JONES #op
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(-87,-68.75)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            run
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
          <g
            transform="translate(-8.75, -1.875) scale(0.2) translate(-24, -24)"
          >
            <g
              className="c-icon-alert-circle--black"
            >
              <circle
                className="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                className="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                className="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </div>
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        <b>
          Block:
        </b>
         
        block
        <br />
        <b>
          Run:
        </b>
         
        run
        <br />
        <b>
          Vehicle:
        </b>
         
        label
        <br />
        <b>
          Variant:
        </b>
         
        <br />
        <b>
          Adherence:
        </b>
         
        0 min early
        <br />
        <b>
          Operator:
        </b>
         
        <span
          className="fs-mask"
        >
          NORA JONES #op
        </span>
      </div>
      <g
        className="c-ladder__vehicle"
        onClick={[Function]}
        transform="translate(-63,-68.75)"
      >
        <g
          className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
        >
          <rect
            className="c-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="c-vehicle-icon__label c-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            run
          </text>
          <path
            className="c-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            data-testid="vehicle-triangle"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </div>
    <line
      className="c-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-110}
    />
    <line
      className="c-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-110}
    />
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t0 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-0}
      >
        t0
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-55}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-55}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t1 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-55}
      >
        t1
      </text>
    </div>
    <circle
      className="c-ladder__stop-circle"
      cx={-40}
      cy={-110}
      r="3"
    />
    <circle
      className="c-ladder__stop-circle"
      cx={40}
      cy={-110}
      r="3"
    />
    <div
      className="mock-tippy"
    >
      <div
        className="mock-tippy-content"
      >
        t2 name
      </div>
      <text
        className="c-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={-110}
      >
        t2
      </text>
    </div>
  </svg>
</div>
`;
